...
            "state": "translated",
            "value": "发布失败"
          }
        }
      }
    },
    "Create": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Создать"
          }
...
            "state": "translated",
            "value": "请勿以数字形式保存此信息，请写在纸上并保存在安全的地方。"
          }
        }
      }
    },
    "Done": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Готово"
          }
...
            "state": "translated",
            "value": "指纹核对"
          }
        }
      }
    },
    "First name": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Имя"
          }
...
            "state": "translated",
            "value": "语言更改将立即生效。"
          }
        }
      }
    },
    "Last name": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Фамилия"
          }
...
            "state": "translated",
            "value": "光泽"
          }
        }
      }
    },
    "Show Words": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Показать слова"
          }
...
            "state": "translated",
            "value": "您的历史记录"
          }
        }
      }
    },
    "Your identity in Montana": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Ваша личность в Montana"
          }
...
